<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Titolo della pagina  -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <!-- Barra di navigazione Mese -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnPrevMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/prev_month"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtMonthYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month_year_placeholder"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/btnNextMonth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/next_month"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </RelativeLayout>

            <!-- Giorni della settimana -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="7">
                <TextView style="@style/CalendarDayHeader" android:text="@string/day_mon" />
                <TextView style="@style/CalendarDayHeader" android:text="@string/day_tue" />
                <TextView style="@style/CalendarDayHeader" android:text="@string/day_wed" />
                <TextView style="@style/CalendarDayHeader" android:text="@string/day_thu" />
                <TextView style="@style/CalendarDayHeader" android:text="@string/day_fri" />
                <TextView style="@style/CalendarDayHeader" android:text="@string/day_sat" android:textColor="@color/red_week_day" />
                <TextView style="@style/CalendarDayHeader" android:text="@string/day_sun" android:textColor="@color/red_week_day" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>